@@ -696,18 +696,18 @@ int processmp4(struct lib_ccx_ctx *ctx, struct ccx_s_mp4Cfg *cfg, char *file)
 											   &dec_sub, &mp4_ret, subtype,
 											   data, sample->dataLength);
 								break;
-                            case MEDIA_TYPE(GF_ISOM_MEDIA_TEXT, GF_ISOM_SUBTYPE_TEXT): // text:text 
-                            {
-                                static int unsupported_reported = 0;
-                                if (!unsupported_reported)
-                                {
-                                    mprint ("\ntext:text not yet supported, see\n");
-                                    mprint ("https://developer.apple.com/library/mac/documentation/quicktime/qtff/QTFFChap3/qtff3.html\n");
-                                    mprint ("If you want to work on a PR.\n");
-                                    unsupported_reported = 1;
-                                }
-                                break;
-                            }
+							case MEDIA_TYPE(GF_ISOM_MEDIA_TEXT, GF_ISOM_SUBTYPE_TEXT): // text:text
+							{
+								static int unsupported_reported = 0;
+								if (!unsupported_reported)
+								{
+									mprint("\ntext:text not yet supported, see\n");
+									mprint("https://developer.apple.com/library/mac/documentation/quicktime/qtff/QTFFChap3/qtff3.html\n");
+									mprint("If you want to work on a PR.\n");
+									unsupported_reported = 1;
+								}
+								break;
+							}
 
 							default:
 								// See https://gpac.wp.imt.fr/2014/09/04/subtitling-with-gpac/ for more possible types
